--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <script async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-118451881-1" />
+
+  <script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    (window.dataLayer = window.dataLayer || []),
+      gtag("js", new Date()),
+      gtag("config", "UA-118451881-1");
+
+  </script>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Oswald:700" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -37,5 +49,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Oswald:700" rel="stylesheet">
   </body>
 </html>
